PV Localization Translations

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -4255,10 +4255,10 @@
     <value>تحقق من إشارة مستشعر التحكم Amperage وأسلاكها في الخزانة الكهربائية</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>لم يتم الوصول إلى الحد الأدنى الحالي! تحقق من الصمامات الخط الرئيسي، والظلم المحلي والأسلاك المحرك</value>
+    <value>لم يتم الوصول إلى الحد الأدنى الحالي! تحقق من صمامات الخط الرئيسي ووحدة فصل الاتصال المحلية وأسلاك المحرك ومكونات دائرة الطاقة</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>تجاوز الحد الأقصى الحالي (&gt; 115٪ لمدة 15 ثانية)! تحقق من الجهاز، والوافع وانسداد ممكن.</value>
+    <value>تم تجاوز الحد الأقصى للتيار (&gt; 115% لمدة 15 ثانية)! تحقق من الجهاز وناقل الحركة والانسداد المحتمل.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>تحقق من الأسلاك الاستشعار الحالية والإشارة. تأكد من عدم إغلاق الجهاز الرئيسي للجهاز (محظور)</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>تحقق من وقت تشغيل وإيقاف محرض الصومعة حيث يتم تجميد القياس أثناء تشغيل المحرض.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>من المحتمل أن تكون الشفرات مهترئة وتحتاج إلى الاستبدال. تحقق أيضًا من كمية المواد الواردة وإعداد التيار</value>
   </data>
 </root>
