--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -4255,10 +4255,10 @@
     <value>Überprüfen Sie das Signal des Stromverstärkers und seine Verkabelung im Elektroschrank</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>Mindeststrom wird nicht erreicht! Überprüfen Sie die Hauptzeilensicherungen, den lokalen Disconnetor und die Motorverdrahtung</value>
+    <value>Mindeststrom wird nicht erreicht! Überprüfen Sie die Hauptsicherungen, den lokalen Trennschalter, die Motorverkabelung und die Komponenten des Stromkreises</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>Maximalstrom überschritten (&gt; 115% für 15 Sekunden)! Überprüfen Sie die Maschine, die Übertragung und eine mögliche Blockade.</value>
+    <value>Maximaler Strom überschritten (&gt;115 % für 15 Sek.) ! Überprüfen Sie die Maschine, das Getriebe und eine mögliche Blockade.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>Überprüfen Sie die aktuelle Sensorverdrahtung und das Signal. Stellen Sie sicher, dass der Hauptschütz des Geräts nicht geschlossen ist (blockiert)</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Überprüfen Sie die Ein- und Ausschaltzeit des Silo-Rührwerks, da der Messwert während des Rührwerks eingefroren ist.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>Die Klingen sind wahrscheinlich abgenutzt und müssen ersetzt werden. Überprüfen Sie auch die Menge des eingehenden Materials und die Stromeinstellung</value>
   </data>
 </root>
