--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -4255,10 +4255,10 @@
     <value>Verifique la señal del sensor de control de amperaje y su cableado en el Armario eléctrico</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>¡No Se Alcanza La Corriente Mínima! Revise Los Fusibles De La Línea Principal, El Seccionador Local Y El Cableado Del Motor</value>
+    <value>¡No se alcanza la corriente mínima! Verifique los fusibles de la línea principal, el seccionador local, el cableado del motor y los componentes del circuito de alimentación</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>Corriente Máxima Superada (&gt;115 % Durante 15 Segundos) ! Revise La Máquina, La Transmisión Y Un Posible Bloqueo.</value>
+    <value>¡Corriente máxima excedida (&gt;115% durante 15 segundos)! Revise la máquina, la transmisión y un posible bloqueo.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>Verifique El Cableado Y La Señal Del Sensor De Corriente. Asegúrese De Que El Contactor Principal Del Dispositivo No Esté Cerrado (Bloqueado)</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Verifique el tiempo de ENCENDIDO y APAGADO del agitador del silo ya que la medida se congela durante el funcionamiento del agitador.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>Las cuchillas probablemente estén desgastadas y deban ser reemplazadas. Verifique también la cantidad de material entrante y la configuración de la corriente.</value>
   </data>
 </root>
