--- a/Prevu.Localization/Properties/Resources.fr.resx
+++ b/Prevu.Localization/Properties/Resources.fr.resx
@@ -4258,7 +4258,7 @@
     <value>Vérifiez le signal du capteur de contrôle d'ampérage et son câblage dans l'armoire électrique</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>Le courant minimum n'est pas atteint ! Vérifiez les fusibles de la ligne principale, le sectionneur local et le câblage du moteur.</value>
+    <value>Le courant minimum n'est pas atteint ! Vérifiez les fusibles de la ligne principale, le sectionneur local, le câblage du moteur et les composants du circuit d'alimentation</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
     <value>Courant maximum dépassé (&gt;115 % pendant 15 secondes) ! Vérifiez la machine, la transmission et un éventuel blocage.</value>
@@ -4285,7 +4285,7 @@
     <value>Vérifiez les conditions de travail du filtre-presse et les paramètres de processus</value>
   </data>
   <data name="INFO_AMP_11" xml:space="preserve">
-    <value>Vérifiez le ventilateur pour tout blocage ou obstruction matérielle - Réglez la limite de courant minimale correcte.</value>
+    <value>Vérifiez le ventilateur pour tout blocage ou obstruction matérielle - Réglez la limite de courant minimale correcte</value>
   </data>
   <data name="INFO_ROT_1" xml:space="preserve">
     <value>Rotation du rotor détectée sans commande ! - Réinitialisez l'alarme pour redémarrer. Vérifiez le câblage en cas de défaut persistant</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Vérifiez l'heure de marche et d'arrêt de l'agitateur de silo puisque la mesure est gelée pendant le fonctionnement de l'agitateur.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>Les lames sont probablement usées et doivent être remplacées. Vérifiez également la quantité de matériel entrant et le réglage du courant</value>
   </data>
 </root>
