--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -4258,10 +4258,10 @@
     <value>בדוק את אות חיישן בקרת Amperage ואת החיווט שלו בארון החשמל</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>הזרם המינימלי לא מושג! בדוק את נתיכים בקו הראשי, את המנתק המקומי ואת חיווט המנוע</value>
+    <value>הזרם המינימלי לא הושג! בדוק נתיכים של קו ראשי, מנתק מקומי, חיווט מנוע ורכיבי מעגל מתח</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>חריגה מהזרם המרבי (&gt; 115% למשך 15 שניות)! בדוק את המכונה, תמסורת וחסימה אפשרית.</value>
+    <value>חריגה מהזרם המרבי (&gt;115% למשך 15 שניות) ! בדוק את המכונה, העברה וחסימה אפשרית.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>בדוק את החיווט והאות של חיישן הנוכחי. ודא שהמגע הראשי של ההתקן אינו סגור (חסום)</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>סמן את זמן ההפעלה והכיבוי של מעבד הסילו מכיוון שהמידה קפואה במהלך הפעלת המערבל.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>הלהבים כנראה שחוקים וצריך להחליף אותם. בדוק גם את כמות החומר הנכנס ואת הגדרת הזרם</value>
   </data>
 </root>
