--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -4258,10 +4258,10 @@
     <value>Controllare il segnale del sensore di controllo dell'amperaggio e il suo cablaggio nel mobile elettrico</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>La corrente minima non viene raggiunta! Controllare i fusibili della linea principale, il sezionatore locale e il cablaggio del motore</value>
+    <value>La corrente minima non è stata raggiunta! Controllare i fusibili della linea principale, il sezionatore locale, il cablaggio del motore e i componenti del circuito di alimentazione</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>Corrente massima superata (&gt;115% per 15 secondi) ! Controllare la macchina, la trasmissione e un possibile blocco.</value>
+    <value>Corrente Massima Superata (&gt;115% per 15 secondi)! Controllare la Macchina, la Trasmissione e Verificare Se Esiste Un Possibile Blocco.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>Controllare il cablaggio e il segnale del sensore di corrente. Assicurarsi che il contattore principale del dispositivo non sia chiuso (bloccato)</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Controllare il tempo di accensione e spegnimento dell'agitatore del silo poiché la misura è congelata durante il funzionamento dell'agitatore.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>Probabilmente le lame sono usurate e devono essere sostituite. Controllare anche la quantità di materiale in ingresso e l'impostazione della corrente</value>
   </data>
 </root>
