--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -4258,10 +4258,10 @@
     <value>Controleer het signaal van de stroomsterktecontrolesensor en de bedrading ervan in de elektrische kast</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>Minimale stroom wordt niet bereikt! Controleer de hoofdzekeringen, de lokale stroomonderbreker en de motorbedrading</value>
+    <value>Minimale stroom wordt niet bereikt! Controleer de hoofdzekeringen, de lokale stroomonderbreker, de motorbedrading en de componenten van het stroomcircuit</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>Maximale stroom overschreden (&gt;115% gedurende 15 sec)! Controleer de machine, de transmissie en een mogelijke verstopping.</value>
+    <value>Maximale stroom overschreden (&gt;115% gedurende 15 sec) ! Controleer de machine, de transmissie en een mogelijke verstopping.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>Controleer de bedrading en het signaal van de huidige sensor. Zorg ervoor dat de hoofdschakelaar van het apparaat niet gesloten (geblokkeerd) is</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Controleer de AAN- en UIT-tijd van het silo-roerwerk, aangezien de maateenheid vastloopt tijdens het draaien van het roerwerk.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>De messen zijn waarschijnlijk versleten en moeten worden vervangen. Controleer ook de hoeveelheid binnenkomend materiaal en de stroomsterkte</value>
   </data>
 </root>
