--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -4258,10 +4258,10 @@
     <value>Verifique o sinal do sensor de controle de amperagem e sua fiação no gabinete elétrico</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>A corrente mínima não é alcançada! Verifique os fusíveis da linha principal, o desconexão local e a fiação do motor</value>
+    <value>A corrente mínima não foi alcançada! Verifique os fusíveis da linha principal, o seccionador local, a fiação do motor e os componentes do circuito de alimentação</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>A corrente máxima excedeu (&gt; 115% para 15 segundos)! Verifique a máquina, a transmissão e um possível bloqueio.</value>
+    <value>Corrente máxima excedida (&gt;115% por 15 segundos) ! Verifique a máquina, a transmissão e um possível bloqueio.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>Verifique a fiação e o sinal do sensor atual. Verifique se o contator principal do dispositivo não está fechado (bloqueado)</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Verifique o tempo de ativação e desativação do agitador do silo, pois a medida está congelada durante a operação do agitador.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>As lâminas provavelmente estão gastas e precisam ser substituídas. Verifique também a quantidade de material recebido e a configuração da corrente</value>
   </data>
 </root>
