--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -4366,7 +4366,7 @@
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>Minimum Current Is Not Reached ! Check The Main Line Fuses, Local Disconnetor And And The Motor Wiring</value>
+    <value>Minimum Current Is Not Reached ! Check Main Line Fuses, Local Disconnetor, Motor Wiring, And Power Circuit Components</value>
     <comment>InfoText Fault</comment>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
@@ -10784,6 +10784,10 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Check ON And OFF Time Of The Silo Agitator Since Measure Is Frozen During Agitator Run.</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>Blades Are Probably Worn And Need To Be Replaced. Check Also The Amount Of Incoming Material And The Setting Of Current</value>
     <comment>InfoText Fault</comment>
   </data>
 </root>
