--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -4258,10 +4258,10 @@
     <value>Verificați semnalul senzorului de control al amperajului și cablarea acestuia în dulapul electric</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>Curentul minim nu este atins! Verificați siguranțele liniei principale, deconetul local și cablarea motorului</value>
+    <value>Curentul minim nu este atins! Verificați siguranțele liniei principale, deconectatorul local, cablarea motorului și componentele circuitului de alimentare</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>Curentul maxim a depășit (&gt; 115% pentru 15 sec)! Verificați mașina, transmiterea și un posibil blocaj.</value>
+    <value>Curent maxim depășit (&gt;115% pentru 15 secunde) ! Verificați mașina, transmisia și un posibil blocaj.</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>Verificați cablarea și semnalul senzorului curent. Asigurați -vă că contactorul principal al dispozitivului nu este închis (blocat)</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Verificați timpul de pornire și oprire a agitatorului silozului, deoarece măsura este înghețată în timpul funcționării agitatorului.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>Lamele sunt probabil uzate și trebuie înlocuite. Verificați, de asemenea, cantitatea de material primit și setarea curentului</value>
   </data>
 </root>
