--- a/Prevu.Localization/Properties/Resources.sl.resx
+++ b/Prevu.Localization/Properties/Resources.sl.resx
@@ -4258,7 +4258,7 @@
     <value>Preverite signal senzorja za nadzor jakosti toka in njegovo ožičenje v električni omarici</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>Minimalni tok ni dosežen! Preverite glavne varovalke, lokalni odklopnik in ožičenje motorja</value>
+    <value>Minimalni tok ni dosežen! Preverite glavne varovalke, lokalni odklopnik, ožičenje motorja in komponente napajalnega tokokroga</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
     <value>Največji tok je presežen (&gt;115 % za 15 sekund)! Preverite stroj, menjalnik in morebitno blokado.</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>Preverite čas vklopa in izklopa mešala silosa, ker je meritev med delovanjem mešala zamrznjena.</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>Rezila so verjetno obrabljena in jih je treba zamenjati. Preverite tudi količino vhodnega materiala in nastavitev toka</value>
   </data>
 </root>
