--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -4255,10 +4255,10 @@
     <value>检查安培控制传感器信号及其在电柜中的接线</value>
   </data>
   <data name="INFO_AMP_2" xml:space="preserve">
-    <value>无法达到最小电流！检查主线保险丝，本地Disconnetor和电机接线</value>
+    <value>未达到最小电流！检查主线熔断器、本地隔离开关、电机接线和电源电路组件</value>
   </data>
   <data name="INFO_AMP_3" xml:space="preserve">
-    <value>最大电流超过（&gt; 115％15秒）！检查机器，传输和可能的堵塞。</value>
+    <value>超过最大电流（&gt;115%，持续 15 秒）！检查机器、变速箱和可能的堵塞。</value>
   </data>
   <data name="INFO_AMP_4" xml:space="preserve">
     <value>检查电流传感器接线和信号。确保设备主接触器未关闭（已堵塞）</value>
@@ -10409,5 +10409,8 @@
   </data>
   <data name="INFO_LEVEL_20" xml:space="preserve">
     <value>检查筒仓搅拌器的开启和关闭时间，因为搅拌器运行期间计量被冻结。</value>
+  </data>
+  <data name="INFO_AMP_13" xml:space="preserve">
+    <value>刀片可能已磨损并需要更换。还要检查进料量和电流设置</value>
   </data>
 </root>
