PV Localization - New Translation

--- a/Prevu.Localization/Properties/Resources.ar.resx
+++ b/Prevu.Localization/Properties/Resources.ar.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>من المحتمل أن تكون الشفرات مهترئة وتحتاج إلى الاستبدال. تحقق أيضًا من كمية المواد الواردة وإعداد التيار</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>يجب أن تبدأ المضخة قبل إطلاق الضبط التلقائي للمعايرة الحالية والحفاظ على تشغيلها منذ اكتمال المعايرة</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>المعايرة الحالية بسرعات مختلفة غير مكتملة. قم بتشغيل قائمة التكوين التلقائي لإكمال المعايرة المطلوبة</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>لقد فقدت صمامات التفريغ موقعها المتبادل الآمن. أصبح المشغل الآن قادرًا على فتحها في نفس الوقت في وضع الصيانة</value>
+  </data>
 </root>
