--- a/Prevu.Localization/Properties/Resources.es.resx
+++ b/Prevu.Localization/Properties/Resources.es.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>Las cuchillas probablemente estén desgastadas y deban ser reemplazadas. Verifique también la cantidad de material entrante y la configuración de la corriente.</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>Es necesario arrancar la bomba antes de iniciar el ajuste automático de la calibración actual y mantenerla funcionando desde que se completa la calibración.</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>La calibración actual a diferente velocidad está incompleta. Inicie el menú Autotune en configuración para completar la calibración requerida</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Las válvulas de descarga han perdido su posición recíproca. Enclavamientos seguros. El operador ahora puede abrirlos al mismo tiempo en modo de mantenimiento</value>
+  </data>
 </root>
