--- a/Prevu.Localization/Properties/Resources.fr.resx
+++ b/Prevu.Localization/Properties/Resources.fr.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>Les lames sont probablement usées et doivent être remplacées. Vérifiez également la quantité de matériel entrant et le réglage du courant</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>La pompe doit être démarrée avant le lancement du réglage automatique de l'étalonnage actuel et doit être maintenue en marche une fois l'étalonnage terminé.</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>L'étalonnage actuel à différentes vitesses est incomplet. Lancez le menu de configuration Autotune In pour terminer l’étalonnage requis</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Les vannes de décharge ont perdu leur position réciproque. Verrouillage sécurisé. L'opérateur est désormais capable de les ouvrir en même temps en mode maintenance</value>
+  </data>
 </root>
