--- a/Prevu.Localization/Properties/Resources.he.resx
+++ b/Prevu.Localization/Properties/Resources.he.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>הלהבים כנראה שחוקים וצריך להחליף אותם. בדוק גם את כמות החומר הנכנס ואת הגדרת הזרם</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>יש להפעיל את המשאבה לפני ההשקה של כוונון אוטומטי של כיול נוכחי ולהשאיר אותה פועלת מאז שהכיול הושלם</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>כיול נוכחי במהירות שונה אינו שלם. הפעל את תפריט התצורה האוטומטי כדי להשלים את הכיול הנדרש</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>שסתומי פריקה איבדו את מיקומם ההדדי נעילות מאובטחות. המפעיל מסוגל כעת לפתוח אותם באותו זמן במצב תחזוקה</value>
+  </data>
 </root>
