--- a/Prevu.Localization/Properties/Resources.it.resx
+++ b/Prevu.Localization/Properties/Resources.it.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>Probabilmente le lame sono usurate e devono essere sostituite. Controllare anche la quantità di materiale in ingresso e l'impostazione della corrente</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>La pompa deve essere avviata prima dell'avvio della regolazione automatica della calibrazione corrente e mantenerla in funzione una volta completata la calibrazione</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>La calibrazione corrente a velocità diverse è incompleta. Avviare il menu di configurazione Autotune per completare la calibrazione richiesta</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Le valvole di scarico hanno perso la loro posizione reciproca Interblocchi di sicurezza. L'operatore è ora in grado di aprirli contemporaneamente in modalità manutenzione</value>
+  </data>
 </root>
