--- a/Prevu.Localization/Properties/Resources.nl.resx
+++ b/Prevu.Localization/Properties/Resources.nl.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>De messen zijn waarschijnlijk versleten en moeten worden vervangen. Controleer ook de hoeveelheid binnenkomend materiaal en de stroomsterkte</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>De pomp moet worden gestart voordat Autotune van de huidige kalibratie wordt gestart en moet blijven draaien sinds de kalibratie is voltooid</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>Huidige kalibratie bij verschillende snelheden is onvolledig. Start het Autotune-configuratiemenu om de vereiste kalibratie te voltooien</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Afvoerkleppen hebben hun wederzijdse positie verloren Veilige vergrendelingen. De operator kan ze nu tegelijkertijd openen in de onderhoudsmodus</value>
+  </data>
 </root>
