--- a/Prevu.Localization/Properties/Resources.pt.resx
+++ b/Prevu.Localization/Properties/Resources.pt.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>As lâminas provavelmente estão gastas e precisam ser substituídas. Verifique também a quantidade de material recebido e a configuração da corrente</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>A bomba precisa ser iniciada antes do início do ajuste automático da calibração atual e mantê-la funcionando desde que a calibração esteja concluída</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>A calibração atual em velocidades diferentes está incompleta. Inicie o menu de configuração do Autotune para concluir a calibração necessária</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>As válvulas de descarga perderam seus intertravamentos seguros de posição recíproca. O operador agora pode abri-los ao mesmo tempo no modo de manutenção</value>
+  </data>
 </root>
