--- a/Prevu.Localization/Properties/Resources.resx
+++ b/Prevu.Localization/Properties/Resources.resx
@@ -10790,4 +10790,16 @@
     <value>Blades Are Probably Worn And Need To Be Replaced. Check Also The Amount Of Incoming Material And The Setting Of Current</value>
     <comment>InfoText Fault</comment>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>Pump Needs To Be Started Before Launching of Autotune Of Current Calibration And Keep It Running Since Calibration Is Completed</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>Current Calibration At Different Speed Is Incomplete. Launch The Autotune In Configuration Menu To Complete The Required Calibration</value>
+    <comment>InfoText Fault</comment>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Discharge Valves Has Lost Their Reciprocal Position Secure Interlocks. Operator Is Now Able To Open Them At The Same Time In Maintenance Mode</value>
+    <comment>InfoText Message</comment>
+  </data>
 </root>
