--- a/Prevu.Localization/Properties/Resources.ro.resx
+++ b/Prevu.Localization/Properties/Resources.ro.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>Lamele sunt probabil uzate și trebuie înlocuite. Verificați, de asemenea, cantitatea de material primit și setarea curentului</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>Pompa trebuie să fie pornită înainte de lansarea autoajustării calibrării curente și să o mențină în funcțiune, deoarece calibrarea este finalizată</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>Calibrarea curentă la viteză diferită este incompletă. Lansați Autotune în meniul de configurare pentru a finaliza calibrarea necesară</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Supapele de refulare și-au pierdut interblocarele de siguranță din poziție reciprocă. Operatorul este acum capabil să le deschidă în același timp în modul de întreținere</value>
+  </data>
 </root>
