--- a/Prevu.Localization/Properties/Resources.sl.resx
+++ b/Prevu.Localization/Properties/Resources.sl.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>Rezila so verjetno obrabljena in jih je treba zamenjati. Preverite tudi količino vhodnega materiala in nastavitev toka</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>Črpalko je treba zagnati pred zagonom samodejne nastavitve trenutne kalibracije in jo pustiti delovati, ko je kalibracija končana</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>Trenutna kalibracija pri drugačni hitrosti je nepopolna. Zaženite Autotune v konfiguracijskem meniju, da dokončate zahtevano kalibracijo</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Izpustni ventili so izgubili svoj vzajemni položaj. Varne zapore. Operater jih lahko zdaj odpre istočasno v načinu vzdrževanja</value>
+  </data>
 </root>
