--- a/Prevu.Localization/Properties/Resources.zh.resx
+++ b/Prevu.Localization/Properties/Resources.zh.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>刀片可能已磨损并需要更换。还要检查进料量和电流设置</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>泵需要在当前校准启动自动调谐之前启动，并在校准完成后保持运行</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>当前不同速度下的校准不完整。在配置菜单中启动自动调谐以完成所需的校准</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>排放阀失去了其相互位置安全联锁装置。操作员现在可以在维护模式下同时打开它们</value>
+  </data>
 </root>
