--- a/Prevu.Localization/Properties/Resources.de.resx
+++ b/Prevu.Localization/Properties/Resources.de.resx
@@ -10413,4 +10413,13 @@
   <data name="INFO_AMP_13" xml:space="preserve">
     <value>Die Klingen sind wahrscheinlich abgenutzt und müssen ersetzt werden. Überprüfen Sie auch die Menge des eingehenden Materials und die Stromeinstellung</value>
   </data>
+  <data name="INFO_CALIBRATION_1" xml:space="preserve">
+    <value>Die Pumpe muss vor dem Start der automatischen Abstimmung der aktuellen Kalibrierung gestartet werden und nach Abschluss der Kalibrierung weiterlaufen</value>
+  </data>
+  <data name="INFO_CALIBRATION_2" xml:space="preserve">
+    <value>Die aktuelle Kalibrierung bei unterschiedlicher Geschwindigkeit ist unvollständig. Starten Sie das Autotune-Konfigurationsmenü, um die erforderliche Kalibrierung abzuschließen</value>
+  </data>
+  <data name="M_INFO_GT_VALVES_2" xml:space="preserve">
+    <value>Auslassventile haben ihre gegenseitige Position verloren. Sichere Verriegelungen. Der Bediener kann sie jetzt im Wartungsmodus gleichzeitig öffnen</value>
+  </data>
 </root>
